--- a/linking_java/OntoSimilarity/pom.xml
+++ b/linking_java/OntoSimilarity/pom.xml
@@ -5,6 +5,26 @@
 	<artifactId>OntoSimilarity</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
+    
 	<dependencies>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
