--- a/linking_ui/OntoSimUI/package.json
+++ b/linking_ui/OntoSimUI/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^3.4.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "shelljs": "^0.8.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
