--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,24 +3,24 @@ version: '3.7'
 services:
  py-service:
   image: ontosimpy:v1
-  build: ./Python/OntoSimilarity_GSOC_local/py_files/
+  build: ./linking_python/
   volumes:
-   - ./Python/OntoSimilarity_GSOC_local/py_files/OntoSimPY:/app
+   - ./linking_python/OntoSimPY:/app
   ports:
    - 5000:5000
 
  java-service:
   image: ontosimjava:v1
-  build: ./Java/OntoSimilarity/
+  build: ./linking_java/OntoSimilarity/
   volumes:
-   - ./Java/OntoSimilarity
+   - ./linking_java/OntoSimilarity
   ports:
    - 8080:8080
 
  ui-service:
   image: ontosimui:v1
-  build: ./Angular/OntoSimUI/
+  build: ./linking_ui/OntoSimUI/
   volumes:
-   - ./Angular/OntoSimUI/
+   - ./linking_ui/OntoSimUI/
   ports:
    - 80:80
