--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,26 +1,24 @@
 version: '3.7'
 
 services:
- py-service:
-  image: ontosimpy:v1
-  build: ./Python/OntoSimilarity_GSOC_local/py_files/
-  volumes:
-   - ./Python/OntoSimilarity_GSOC_local/py_files/OntoSimPY:/app
-  ports:
-   - 5000:5000
-
  java-service:
   image: ontosimjava:v1
-  build: ./Java/OntoSimilarity/
-  volumes:
-   - ./Java/OntoSimilarity
+  build: ./linking_java/OntoSimilarity/
   ports:
    - 8080:8080
+  tty: true
+
+ py-service:
+  image: ontosimpy:v1
+  build: ./linking_python/
+  volumes:
+  - ./linking_python/py_model:/app
+  ports:
+   - 5000:5000
+  tty: true
 
  ui-service:
   image: ontosimui:v1
-  build: ./Angular/OntoSimUI/
-  volumes:
-   - ./Angular/OntoSimUI/
+  build: ./linking_ui/OntoSimUI/
   ports:
    - 80:80
